@startuml
'https://plantuml.com/state-diagram


[*] --> NoWord: counter = 0
NoWord --> InTag: html <
NoWord --> Word: counter++
Word --> NoWord: sonstiges
InTag --> Word: html <
InANF --> NoWord: "
NoWord --> NoWord
InANF --> Word: "
InTag --> InTag
InANF --> InANF
Word --> InANF
Word --> Word: Buchstabe
InSLASH --> InANF: egal
InANF --> InSLASH: /
}
@enduml